fix: restore dark mode surfaces (#6195)

--- a/web_src/src/index.css
+++ b/web_src/src/index.css
@@ -63,8 +63,16 @@ div.monaco-editor .view-overlays .current-line {
 
 .dark div.monaco-editor {
   --vscode-focusBorder: transparent;
+  --vscode-editor-background: rgb(31 41 55);
+  --vscode-editorGutter-background: rgb(31 41 55);
+  --vscode-editor-foreground: rgb(243 244 246);
   --vscode-editorLineHighlightBackground: rgb(31 41 55);
   --vscode-editorLineHighlightBorder: transparent;
+}
+
+.dark div.monaco-editor .margin,
+.dark div.monaco-editor .monaco-editor-background {
+  background-color: rgb(31 41 55) !important;
 }
 
 .dark div.monaco-editor .margin-view-overlays .current-line,
